<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reviewapptcc.detail.GameDetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/content_description_detail_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvGameName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textSize="26sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBanner"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Nome do Jogo"/>

        <TextView
            android:id="@+id/tvRatingGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGameName"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Rating 4.0"/>

        <TextView
            android:id="@+id/tvGameDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRatingGame"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Descrição do jogo nessa"/>

        <Button
            android:id="@+id/btnReviewGame"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:textColor="@drawable/text_button"
            android:background="@drawable/outline_button"
            android:text="@string/review_game"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvGameDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btnSite"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:textColor="@drawable/text_button"
            android:background="@drawable/outline_button"
            android:text="@string/visit_official_site"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvGameDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>